0.11.2
 - enh: add context manager for CPUSegmenter
 - enh: record and log execution time of segmentation and feature extraction
 - enh: properly handle border case for computing contour-moments
 - tests: do not use numba's JIT during testing (coverage)
0.11.1
 - fix: fix GPUSegmenter labeling
0.11.0
 - feat: introduce GPUSegmenter base class
 - fix: handle bytes-values in HDF5 attributes
 - ref: correctly introduce `requires_background_correction` for segmenters
 - setup: don't requrie cibuildwheel
0.10.0
 - enh: some minor improvements in efficiency
 - ref: increment DCNUM_PPID_GENERATION for the sake of clarity
 - ref: unify dealing with num_workers and debugging
0.0.9
 - fix: properly propagate event extraction keyword arguments
 - fix: QueueCollectorThread used uint16 for enumerating indices
 - fix: handle case where number of events is not multiple of chunk_size
 - enh: reduce thread waiting times
 - enh: add bounds check for image cache
0.0.8
 - feat: introduce QueueCollectorThread
 - feat: introduce SegmenterManagerThread
 - feat: instroduce EventExtractorManagerThread and corresponding workers
 - enh: minor improvements for HDF5ImageCache and ImageCorrCache
 - enh: use data size as cache size if smaller than requested chunk size
 - enh: return dictionary for brightness feature computation
 - enh: allow to pass a single image for brightness feature computation
 - enh: allow to pass a single image for texture feature computation
 - enh: make sure that masks are written as uint8 to HDF5 files
 - ref: haralick texture computation now returns dict instead of recarray
 - ref: renamed HDF5WriterThread to DequeWriterThread
 - ref: renamed feature submodules (prepended "feat_")
0.0.7
 - enh: dataset keyword arguments and mode HDF5WriterThread
 - enh: speed-up of brightness feature computation
0.0.6
 - feat: add HDF5Writer and HDF5WriterThread classes in write submodule
 - feat: segmenters compute labeled images instead of masks