@@ -1,7 +1,9 @@
 0.11.2
+ - meta: increment pipeline ID (texture feature computation)
  - enh: add context manager for CPUSegmenter
  - enh: record and log execution time of segmentation and feature extraction
  - enh: properly handle border case for computing contour-moments
+ - enh: properly handle empty images/masks in haralick texture features
  - tests: do not use numba's JIT during testing (coverage)
 0.11.1
  - fix: fix GPUSegmenter labeling
